@@ -2047,8 +2047,8 @@ static int mark5b_decode_32bitstream_2bit_decimation4(struct mark5_stream *ms,
 
 static int mark5_format_mark5b_make_formatname(struct mark5_stream *ms)
 {
-	sprintf(ms->formatname, "Mark5B-%d-%d-%d", ms->Mbps, 
-		ms->nchan, ms->nbit);
+	snprintf(ms->formatname, MARK5_STREAM_ID_LENGTH, "Mark5B-%d-%d-%d", 
+		ms->Mbps, ms->nchan, ms->nbit);
 
 	return 0;
 }
