@@ -26,6 +26,7 @@
 // $LastChangedDate$
 //
 //============================================================================
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -72,11 +73,13 @@ static int mark5_stream_unpacker_init(struct mark5_stream *ms)
 	ms->mjd = -1;
 	if(ms->next == mark5_stream_unpacker_next_noheaders)
 	{
-		sprintf(ms->streamname, "Unpacker-no-headers");
+		snprintf(ms->streamname, MARK5_STREAM_ID_LENGTH,
+			"Unpacker-no-headers");
 	}
 	else
 	{
-		sprintf(ms->streamname, "Unpacker-with-headers");
+		snprintf(ms->streamname, MARK5_STREAM_ID_LENGTH,
+			"Unpacker-with-headers");
 	}
 	
 	return 0;
