@@ -9,6 +9,7 @@ Version 1.4.1
 * Put pcal utility in this package
 * Add zerocorr -- a zero baseline cross correlator
 * Add sigint catching to several utils
+* Improve string (mostly filename) handling safety with snprintf
 * Version for DiFX-2.0.0
 
 Version 1.4.0
